# finance-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README.tr.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_must_change_password.py  004_add_soft_delete.py  005_add_audit_log.py  006_add_trade_sl_tp.py  007_add_user_favorites.py  008_add_app_config.py
config-presets/: README.md  baseline.json
dashboard/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: entrypoint.sh  hash_password.py
src/: config.py  constants.py  main.py
src/analysis/: indicators.py  ta_engine.py
src/api/: __init__.py  auth.py  dependencies.py  router.py  ws_manager.py
src/backtest/: backtest_runner.py
src/collector/: data_normalizer.py  rest_fetcher.py  rest_poller.py  websocket_manager.py
src/core/: __init__.py  audit.py  circuit_breaker.py  config_reload.py  events.py  exceptions.py  logging.py  metrics.py  rate_limiter.py  retry.py
src/db/: __init__.py  session.py
src/executor/: binance_client.py  fill_monitor.py  order_manager.py
src/models/: __init__.py  app_config.py  audit_log.py  base.py  candle.py  order.py  portfolio_snapshot.py  sentiment.py  signal.py  trade.py  user.py  user_favorite.py
src/notifications/: approval_handler.py  message_formatter.py  telegram_bot.py
src/portfolio/: balance_tracker.py  pnl_calculator.py
src/risk/: position_sizer.py  risk_manager.py  stop_loss.py
src/sandbox/: __init__.py  executor.py  wallet.py
tests/: conftest.py
(+108 files in other folders)
